--- a/style.css
+++ b/style.css
@@ -165,6 +165,233 @@ body {
 }
 
 
+/********************************************
+DAN STYLES 
+********************************************/
+
+.footer {
+	background-image: url("images/footer-background.png");
+	float: left;
+	height: 522px;
+	width: 100%;
+}
+
+.footer-container {
+	height: 440px;
+	margin: 0 auto;
+	width: 960px;
+}
+
+.footer-ribbon {
+	position: relative;
+	float: left;
+	width: 100%;
+	height: 32px;
+	top: -32px;
+	background-image: url('images/footer-ribbon.png');
+}
+
+.store-locator {
+	width: 320px;
+	height: 100%;
+	float: left;
+}
+
+.title {
+	margin: 0 0 0 20px;
+	font-size: 30px;
+	font-family: arial;
+	text-transform: uppercase;
+	text-shadow: 1px 1px 1px #000000;
+	color: #fff;
+}
+
+.title span {
+	color: #f38900;
+}
+
+.title-line {
+	margin: 0 0 0 10px;
+}
+
+.store-map {
+	margin: 18px 0 0 25px;
+}
+
+.store-locator-side-divider {
+	float: right;
+	margin: -380px 0 0;
+}
+
+.find-it {
+	margin: 20px 0 0 125px;
+}
+
+.special-events {
+	float: left;
+	width: 320px;
+	height: 100%;
+}
+
+.event-schedule {
+	width: 250px;
+	height: 220px;
+	margin: 0 0 0 30px;
+}
+
+.area {
+	width: 252px;
+	height: 32px;
+	margin: 0 0 10px 0;
+}
+
+.area p {
+	margin: 5px 0 0 0;
+	float: left;
+	text-transform: uppercase;
+	font-family: arial;
+	color: #fff;
+}
+
+.area p:last-of-type {
+	margin: 5px 0 0 64px;
+}
+
+.events-divider {
+	position: relative;
+	top: -5px;
+}
+
+.area img + img {
+	left: 170px;
+	position: relative;
+	top: -40px;
+}
+
+.events-button {
+	margin: 29px 0 0 136px;
+}
+
+.contact-bon-fun {
+	float: left;
+	width: 320px;
+	height: 100%;
+}
+
+.footer-logo {
+	margin: 6px 0 0 113px;
+}
+
+.sales-media {
+	left: -170px;
+	position: relative;
+	top: 50px;
+}
+
+.contact-left p {
+	color: #FFFFFF;
+	font-family: arial;
+	left: 70px;
+	margin: 0;
+	position: relative;
+	text-transform: uppercase;
+	top: 29px;
+}
+
+.footer-phone {
+	float: right;
+	margin: -10px 20px 0 0;
+}
+
+.contact-right p {
+	float: right;
+	margin: -11px 0 0 0;
+	color: #FFFFFF;
+	font-family: arial;
+	text-transform: uppercase;
+}
+
+.contact-us-bottom-divider {
+	margin: 90px 0 0 40px;
+}
+
+.fb-icon {
+	left: 50px;
+	position: relative;
+	top: -25px;
+}
+
+.fb-likes {
+	margin: -45px 0 0 70px;
+	font-family: verdana;
+	font-size: 12px;
+	color: #939598;
+}
+
+.fb-users {
+	margin: 10px 0 0 50px;
+}
+
+.footer-bottom-section {
+	background-image: url("images/footer-bottom-ribbon.png");
+	float: left;
+	height: 70px;
+	margin: -70px 0 0;
+	width: 100%;
+}
+
+.footer-nav ul {
+	position: relative;
+	top: 12px;
+	left: -70px;
+	font-family: verdana;
+	font-size: 12px;
+	list-style-type: none;
+	position: relative;
+}
+
+.footer-nav ul li a {
+	margin: 0 0 0 20px;
+	text-decoration: none;
+	float: left;
+	text-transform: uppercase;
+	color: #000;
+}
+
+.footer-bottom-section-divider {
+	margin: 0px 0 0 95px;
+}
+
+.bottom-icons {
+	float: right;
+	height: 50px;
+	position: relative;
+	margin-top:10px;
+}
+
+.bottom-icons ul {
+	float: right;
+	margin: 0 0 0 10px;
+	list-style-type: none;
+}
+
+.bottom-icons ul li {
+	float: left;
+}
+
+@media (max-width: 800px) {
+
+	.footer-bottom-section {
+		margin: -20px 0 0;
+	}
+
+	.footer-container {
+		float: left;	
+	}
+
+}
+
+
 /* Responsive Design BreakPoints */
 
 
@@ -183,6 +410,10 @@ body {
 }
 
 @media (max-width: 750px) {
+
+	.slider-area {
+		margin-top:39px;
+	}
 
 	.pull {
 		display:block;
@@ -208,10 +439,10 @@ body {
 	}
 
 	.nav-menu {
-	float:right;
-	width:100%;
-	background-color:#861930;
-	display:none;
+		float:right;
+		width:100%;
+		background-color:#861930;
+		display:none;
 	}
 
 	.nav-menu ul {
@@ -239,4 +470,55 @@ body {
 		padding-left:25px;
 	}
 
+
+	.footer-container {
+		width:100% !important;
+	}
+
+	.bottom-icons {
+		margin-right:40px;
+	}
+
+	.store-locator {
+		margin-left:auto;
+		margin-right:auto;
+		float:none;
+	}
+
+	.special-events {
+		display: none;
+	}
+
+	.contact-bon-fun {
+		display: none;
+	}
+
+	.store-locator-side-divider {
+		display:none;
+	}
+
+	.footer-nav {
+		display: none;
+	}
+
+
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
