--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 Theme Name: Bonfun
 Theme URI: http://doyoubonfun.com
 Description: A theme built for Bonfun Cognac!
-Author: Nicholas Koskowski
+Author: Paul McMahon, Nicholas Koskowski
 Author URI: http://businessonmarketst.com
 Version: 1.0
 Tags: Blank
@@ -16,9 +16,9 @@ General comments (optional).
 *,
 *:before,
 *:after {
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box; 
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box; 
 }
 
 html, body, img {
@@ -28,8 +28,19 @@ html, body, img {
 	padding:0px;
 }
 
+h1,h2,h3,h4,h5,h6 {
+	font-weight:normal;
+}
+
 body {
 	background-image: url('images/main-bg.png');
+}
+
+.header-container {
+	min-width:201px;
+	max-width:960px;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 .container {
@@ -149,16 +160,22 @@ body {
 	margin-left: 270px;
 	margin-top: 68px;
 	letter-spacing:10px;
+	font-family:'Avenir LT W01 35 Light';
+	font-weight:normal;
 }
 
 .slider ul li span:first-of-type {
 	color:#f38400;
+	font-family:'Avenir LT W01 95 Black';
+	line-height:85px;
+	margin-right:-45px;
 }
 
 .slider ul li span:last-of-type {
 	color:#fff;
 	font-size:120px;
 	line-height:67px;
+	font-family:'Avenir LT W01 95 Black';
 }
 
 .slider-bottom-line{
@@ -167,7 +184,7 @@ body {
 	background-image:url('images/slider-lines.png');
 	background-repeat:no-repeat;
 	position: absolute;
-	margin-left: 412px;
+	margin-left: 465px;
 	margin-top: 82px;
 }
 
@@ -210,8 +227,8 @@ body {
 }
 
 .mobile-main-panel{
-		display:none;
-	}
+	display:none;
+}
 
 .carousel {
 	float:left;
@@ -230,7 +247,7 @@ body {
 	height:161px;
 	background-image: url('images/process-bar-top.png');
 	background-repeat: no-repeat;
-    background-size: 100% 75px;
+	background-size: 100% 75px;
 	float:left;
 	text-align: center;
 }
@@ -311,31 +328,42 @@ body {
 
 .process-icon {
 	position:absolute;
+	width:164px;
+	height:47px;
+	padding-top:12px;
+	background-image:url('images/process-icon.png');
 }
 
 .process-infusion-icon{
 	top:78.6%;
 	left:327px;
+	padding-left:34px;
 }
 
 .process-aging-icon {
 	top:61.2%;
 	left:371px;
+	padding-left:44px;
 }
 
 .process-distillation-icon {
 	top:43.8%;
 	left:416px;
+	padding-top:10px;
+	padding-left:20px;
 }
 
 .process-growth-icon {
 	top:26.4%;
 	left:460px;
+	padding-left:36px;
 }
 
 .process-history-icon {
 	top:9%;
 	left:504px;
+	padding-left:39px;
+	background-image:url('images/process-icon-selected.png');
 }
 
 .process-panel {
@@ -357,6 +385,7 @@ body {
 	margin: 0;
 	padding: 0;
 	margin-left: -11px;
+	font-family:'Avenir LT W01 65 Medium';
 }
 
 .process-stage-icon span{
@@ -381,6 +410,7 @@ body {
 	color:#f38900;
 	font-size:20px;
 	line-height:22px;
+	font-family:'Avenir LT W01 95 Black';
 }
 
 .process-lines-outer {
@@ -409,6 +439,7 @@ body {
 	font-size:14px;
 	line-height:22px;
 	color:#ffffff;
+	font-family: 'Avenir LT W01 35 Light';
 }
 
 .process-small-nav-left{
@@ -501,6 +532,40 @@ body {
 	}
 }
 
+@media (min-width: 850px) {
+	.process-viewport {	
+		width: 65%;
+		height: 385px;
+		float: right;
+		overflow: hidden;
+	}
+
+	.process-panel {
+		margin-left:115px;
+		position:absolute;
+	}
+
+	.Stage1{
+		margin-top:0px;
+	}
+
+	.Stage2{
+		margin-top:385px;
+	}
+
+	.Stage3{
+		margin-top:385px;
+	}
+
+	.Stage4{
+		margin-top:385px;
+	}
+
+	.Stage5{
+		margin-top:385px;
+	}
+}
+
 @media (max-width:480px) {
 	.process-panel > p {
 		margin-left:16%;
@@ -526,9 +591,9 @@ Grid Area
 
 .grid-wrapper{
 	margin-left: auto;
-    margin-right: auto;
-    width:80%;
-    margin-top:81px;	
+	margin-right: auto;
+	width:80%;
+	margin-top:81px;	
 }
 
 .grid-row{
@@ -537,7 +602,7 @@ Grid Area
 }
 
 .grid-row h2 {
-	font-family:'Avenir LT W01 65 Medium';
+	font-family:'Avenir LT W01 95 Black';
 	font-size:24px;
 	line-height:26px;
 	color:#ffffff;
@@ -607,6 +672,10 @@ Grid Area
 }
 
 .grid-cover{
+	cursor:pointer;
+}
+
+.grid-cover-vert {
 	cursor:pointer;
 }
 
@@ -730,34 +799,51 @@ Grid Area
 
 .grid-top{
 	display:block;
-	background-image:url('images/grid-top.png');
-	background-repeat:no-repeat;
-	background-size:100% 100%;
 	height:0px;
 	margin-bottom:4px;
 }
 
+.grid-slideout-viewport{
+	width:100%;
+	height:100%;
+	overflow:hidden;
+}
+
+.grid-slideout-strip{
+	width:10000px;
+	height:640px;
+}
+
+.grid-slideout-panel{
+	width:100%;
+	height:640px;
+	display:inline-block;
+	background-image: url('images/grid-top.png');
+background-repeat: no-repeat;
+background-size: 100% 100%;
+}
+
 @media (max-width: 850px) {
 	.grid-box-half {
-	display:inline;
-	width:100%;
-	float: left;
-	margin-top:-4px;
-}
+		display:inline;
+		width:100%;
+		float: left;
+		margin-top:-4px;
+	}
 
-.grid-box-sixth{
-	display:inline;
-	width:33.33%;
-	float: left;
-	margin-top:-4px;
-}
+	.grid-box-sixth{
+		display:inline;
+		width:33.33%;
+		float: left;
+		margin-top:-4px;
+	}
 
-.grid-box-twosixth{
-	display:inline;
-	width:66.67%;
-	float: left;
-	margin-top:-4px;
-}
+	.grid-box-twosixth{
+		display:inline;
+		width:66.67%;
+		float: left;
+		margin-top:-4px;
+	}
 }
 
 
@@ -795,15 +881,17 @@ DAN STYLES
 
 .title {
 	margin: 0 0 0 20px;
-	font-size: 30px;
-	font-family: arial;
+	font-size: 21px;
+	font-family: 'Avenir LT W01 35 Light';
 	text-transform: uppercase;
 	text-shadow: 1px 1px 1px #000000;
 	color: #fff;
+	font-weight:normal;
 }
 
 .title span {
 	color: #f38900;
+	font-family: 'Avenir LT W01 95 Black';
 }
 
 .title-line {
@@ -845,12 +933,13 @@ DAN STYLES
 	margin: 5px 0 0 0;
 	float: left;
 	text-transform: uppercase;
-	font-family: arial;
+	font-family:'Avenir LT W01 45 Book';
 	color: #fff;
+	font-size:14px;
 }
 
 .area p:last-of-type {
-	margin: 5px 0 0 64px;
+	margin: 5px 0 0 76px;
 }
 
 .events-divider {
@@ -886,7 +975,8 @@ DAN STYLES
 
 .contact-left p {
 	color: #FFFFFF;
-	font-family: arial;
+	font-family:'Avenir LT W01 35 Light';
+	font-size:13px;
 	left: 70px;
 	margin: 0;
 	position: relative;
@@ -896,14 +986,15 @@ DAN STYLES
 
 .footer-phone {
 	float: right;
-	margin: -10px 20px 0 0;
+	margin: -10px 5px 0 0;
 }
 
 .contact-right p {
 	float: right;
 	margin: -11px 0 0 0;
 	color: #FFFFFF;
-	font-family: arial;
+	font-family:'Avenir LT W01 45 Book';
+	font-size:14px;
 	text-transform: uppercase;
 }
 
@@ -940,14 +1031,14 @@ DAN STYLES
 	position: relative;
 	top: 12px;
 	left: -70px;
-	font-family: verdana;
+	font-family:'Avenir LT W01 35 Light';
 	font-size: 12px;
 	list-style-type: none;
 	position: relative;
 }
 
 .footer-nav ul li a {
-	margin: 0 0 0 20px;
+	margin: 15px 0 0 20px;
 	text-decoration: none;
 	float: left;
 	text-transform: uppercase;
