--- a/style.css
+++ b/style.css
@@ -57,6 +57,9 @@ body {
 	height:59px;
 	background-image: url('images/header-bg.png');
 	width:100%;
+	position: fixed;
+	z-index:100000;
+	top:0px;
 }
 
 .logo {
@@ -128,7 +131,7 @@ body {
 	width:100%;
 	background-color:#010101;
 	background-size:100%;
-	top:59px;
+	margin-top:31px;
 }
 
 .slider {
@@ -237,10 +240,15 @@ body {
 .carousel {
 	float:left;
 	width:280px;
-	height: 463px;
+	height: 493px;
 	overflow:scroll;
 	margin-left:45px;
-	margin-top:80px;
+	margin-top:0px;
+}
+
+.cloudcarousel {
+	min-width:80px !important;
+	min-height:350px !important;
 }
 
 /* Process Area */
@@ -296,20 +304,40 @@ body {
 .process-panel-wrap {
 	float:right;
 	max-width: 350px;
-	overflow: hidden;
 }
 
 .process-panel {
 	width:350px !important;
-	margin-top:60px;
+	margin-top:53px;
 	float:right;
 	position: relative;
 }
 
-.process-panel img {
+.process-panel .ft-img {
 	width:337px;
 	border:6px solid #fff;
-	height:132px;
+	height:144px;
+}
+
+.process-logo-icon {
+	position: absolute;
+	margin-left: -100px;
+	margin-top: -40px;
+}
+
+.process-icon-txt {
+	position: absolute;
+	color: #fff;
+	text-transform: uppercase;
+	margin-left: -102px;
+	font-family: 'Avenir LT W01 35 Light';
+	font-size: 14px;
+	margin-top: -33px;
+}
+
+.process-icon-txt i {
+	font-style: normal;
+	color:#f38900;
 }
 
 .process-panel h3 {
@@ -339,12 +367,10 @@ body {
 }
 
 .swipe {
-	overflow: hidden;
 	visibility: hidden;
 	position: relative;
 }
 .swipe-wrap {
-	overflow: hidden;
 	position: relative;
 	width:350px !important;
 }
@@ -387,6 +413,11 @@ Grid Area
 	height:320px;
 }
 
+.grid-object img {
+	filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'1 0 0 0 0, 0 1 0 0 0, 0 0 1 0 0, 0 0 0 1 0\'/></filter></svg>#grayscale");
+	-webkit-filter: grayscale(100%);
+}
+
 .grid-overlay {
 	position: relative;
 	margin-top:-324px;
@@ -400,6 +431,7 @@ Grid Area
 	font-weight:normal;
 	text-transform: uppercase;
 	padding-left:18px;
+	max-width:120px;
 }
 
 .horizontal {
@@ -420,6 +452,21 @@ Grid Area
 .yellow {
 	background-color:#e38308;
 	opacity:.8;
+}
+
+.one-half {
+	width:480px;
+	height:320px;
+}
+
+.one-sixth {
+	width:160px;
+	height: 320px;
+}
+
+.two-sixth {
+	width:320px;
+	height: 320px;
 }
 
 .grid-slideout {
@@ -743,9 +790,9 @@ DAN STYLES
 	float:left;
 	width:100%;
 	max-height:410px;
-	background-color:#7f4854;
-	opacity:.7;
+	min-width: 900px;
 	overflow:hidden;
+	margin-top:31px;
 }
 
 .page-header h2 {
@@ -756,6 +803,7 @@ DAN STYLES
 	font-size:80px;
 	position: absolute;
 	max-width:500px;
+	min-width: 480px;
 }
 
 .page-header img {
@@ -766,8 +814,22 @@ DAN STYLES
 
 .content-col {
 	float:left;
-	width: 560px;
+	width: 440px;
 }
+
+@media (max-width: 1200px) {
+	.page-header h2 {
+		margin-top:0px;
+	}
+}
+
+@media (max-width: 960px) {
+	.page-header h2 {
+		font-size: 60px;
+		margin-left:40px;
+	}
+}
+
 
 /* Blog Styles */
 
@@ -775,6 +837,12 @@ DAN STYLES
 	float:left;
 	width:560px;
 	margin-top:30px;
+	margin-bottom:30px;
+}
+
+.blog-post {
+	float: left;
+	max-width: 560px;
 }
 
 .blog-post h2 {
@@ -803,8 +871,8 @@ DAN STYLES
 }
 
 .featured-image img {
-	width:540px;
-	height:300px;
+	max-width:540px;
+	max-height:300px;
 	text-align: center;
 	border:10px solid #fff;
 }
@@ -824,6 +892,60 @@ DAN STYLES
 	margin: 0px;
 	margin-left: 436px;
 	margin-top: -70px;
+}
+
+@media (max-width: 960px) {
+	.blog-col {
+		float:none !important;
+		margin-left: auto;
+		margin-right: auto;
+		width:480px !important;
+	}
+
+	.blog-post {
+		max-width: 480px;
+		overflow: hidden;
+	}
+
+	.blog-post:first-of-type {
+		margin-top: 30px;
+	}
+
+	.blog-post .go-button {
+		margin-left: 0px;
+		margin-top: 40px;
+		float: right;
+	}
+
+	.post-content {
+		max-width: 290px;
+	}
+
+	.post-meta {
+		margin-right:25px;
+	}
+
+	.sidebar-col {
+		display: none;
+	}
+
+	.blog-post .divider {
+		width:460px;
+	}
+
+	.blog-col .divider {
+		width:460px;
+	}
+
+	.featured-image img {
+		max-width: 460px;
+		max-height: 256px;
+	}
+
+}
+
+#single-post {
+	max-width:100%;
 }
 
 /* Sidebar Styles */
